--- a/src/index.scss
+++ b/src/index.scss
@@ -7,122 +7,171 @@
 /*!*************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
   \*************************************************************************************************************************************/
-  * {
-    box-sizing: border-box;
+/*!*************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
+  \*************************************************************************************************************************************/
+  #dkfm {
+    display: none;
   }
-  
-  body,
-  html {
-    overflow-x: hidden;
+
+  body{
+    background-image: url('https://cdn.vox-cdn.com/thumbor/qDV-Av0h_Qf1u6MUJ9L_D7uLM-w=/0x0:1200x800/1200x800/filters:focal(428x63:620x255)/cdn.vox-cdn.com/uploads/chorus_image/image/66160336/image__13_.0.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  
-  .song_info {
-    top: 60%;
-    left: 0;
-    position: absolute;
-    width: 50%;
-    padding: 15px 0;
-    background-color: black;
-    opacity: 50%;
-    color: red;
+
+  .login{
+    display: flex;
+    justify-content: center;
   }
-  
-  .song_title {
-    float: left;
-    padding-right: 15px;
+
+  .fadeIn {
+    animation:  fadeIn 3s both;
   }
-  
-  .now_playing > div {
-    font-style: italic;
+
+  .fadeOut {
+    animation: fadeOut 3s both;
   }
-  
-  .song_content {
-    display: block;
-    width: 100%;
-    transform: translateX(100%);
-    animation: move 15s linear infinite;
-  }
-  
-  @keyframes move {
-    to {
-      transform: translateX(-100%);
+
+  @keyframes fadeOut {
+    0%{
+      opacity: 0;
+      background-color: purple;
+    }
+    50%{
+      opacity: 1;
+      background-color: red;
+    }
+    100%{
+      opacity: 1;
+      background-color: blue;
     }
   }
-  /* ------------ this is scrolling text ^^^^ */
-  *,
-  *::after,
-  *::before {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+  @keyframes fadeIn {
+    0%{
+      opacity: 0;
+    }
+    100%{
+      opacity: 1;
+    }
   }
-  
-  body {
-    height: 100vh;
-    background: linear-gradient(37deg, rgb(238, 174, 202) 0%, rgb(203, 176, 223) 37%, rgb(148, 187, 233) 100%);
-    display: grid;
-    place-items: center;
+/* -----------------^^this is fading animations */
+  * {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  overflow-x: hidden;
+}
+
+.song_info {
+  top: 60%;
+  left: 0;
+  position: absolute;
+  width: 50%;
+  padding: 15px 0;
+  background-color: black;
+  opacity: 50%;
+  color: red;
+}
+
+.song_title {
+  float: left;
+  padding-right: 15px;
+}
+
+.now_playing > div {
+  font-style: italic;
+}
+
+.song_content {
+  display: block;
+  width: 100%;
+  transform: translateX(100%);
+  animation: move 15s linear infinite;
+}
+
+@keyframes move {
+  to {
+    transform: translateX(-100%);
   }
-  
-  .music__title {
-    color: var(--blue);
-    background-color: var(--light);
-    padding: 1.5rem 2.5rem;
-    width: 100%;
-    letter-spacing: -1px;
-    border-radius: var(--radius);
-    text-align: center;
-  }
-  
-  .music__player {
-    display: grid;
-    grid-gap: 1.5rem;
-    margin: 1.5rem;
-    position: relative;
-    z-index: 10;
-    max-width: 500px;
-    min-width: 40vw;
-    background-color: var(--light);
-    box-shadow: 0px 4px 4px var(--dark);
-    border-radius: var(--radius);
-    width: 85%;
-    max-width: 250px;
-    margin: -5rem auto 0;
-    padding: 0.5rem 1rem;
-    position: relative;
-    z-index: initial;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    place-items: center;
-    grid-gap: 1rem;
-    transition: var(--transition);
-  }
-  
-  .music__player.playing {
-    border-radius: 0 0 var(--radius) var(--radius);
-  }
-  
-  .music__player--progress {
-    position: absolute;
-    z-index: -1;
-    height: 10px;
-    width: 100%;
-    top: -10%;
-    overflow: hidden;
-    transition: var(--transition);
-    cursor: pointer;
-  }
-  
-  .music__player.playing .music__player--progress {
-    transform: translateY(0);
-    z-index: 0;
-  }
-  
-  .progress {
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    cursor: pointer;
-  }
-  
+}
+/* ------------ this is scrolling text ^^^^ */
+*,
+*::after,
+*::before {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.music__title {
+  color: var(--blue);
+  background-color: var(--light);
+  padding: 1.5rem 2.5rem;
+  width: 100%;
+  letter-spacing: -1px;
+  border-radius: var(--radius);
+  text-align: center;
+}
+
+.music__player {
+  display: grid;
+  grid-gap: 1.5rem;
+  margin: 1.5rem;
+  position: relative;
+  z-index: 10;
+  max-width: 500px;
+  min-width: 40vw;
+  background-color: var(--light);
+  box-shadow: 0px 4px 4px var(--dark);
+  border-radius: var(--radius);
+  width: 85%;
+  max-width: 250px;
+  margin: -5rem auto 0;
+  padding: 0.5rem 1rem;
+  position: relative;
+  z-index: initial;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  place-items: center;
+  grid-gap: 1rem;
+  transition: var(--transition);
+}
+
+.music__player.playing {
+  border-radius: 0 0 var(--radius) var(--radius);
+}
+
+.music__player--progress {
+  position: absolute;
+  z-index: -1;
+  height: 10px;
+  width: 100%;
+  top: -10%;
+  overflow: hidden;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.music__player.playing .music__player--progress {
+  transform: translateY(0);
+  z-index: 0;
+}
+
+.progress {
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  cursor: pointer;
+}
