--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,9 @@
 /*!*************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
   \*************************************************************************************************************************************/
+/*!*************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
+  \*************************************************************************************************************************************/
   body {
     background-image: url("./dkfm_wip_black.gif");
     background-position: center;
@@ -23,28 +26,43 @@
     background-size: cover;
   }
   
-  #mood{ 
-    border-color: #7c7c7c;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(230, 230, 230)), to(rgb(0, 0, .25)));
-    font-family: 'Roboto', sans-serif;
-  
+  #info{
+    position: relative;
+    font-size: 50px;
+    display: none;
+    color: white;
   }
   
-  #genre{
-    border-color: #7c7c7c;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(230, 230, 230)), to(rgb(0, 0, .25)));
-    font-family: 'Roboto', sans-serif;
+  #info_button{
+    position: absolute;
+    bottom: 8%;
+    right: 3%;
+  }
   
+  #mood {
+    border-color: #7c7c7c;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
+    font-family: "Roboto", sans-serif;
+    margin-right: 100px;
+    cursor: pointer;
+  }
+  
+  #genre {
+    border-color: #7c7c7c;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
   }
   
   #start_button {
     display: block;
     border-color: #7c7c7c;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(230, 230, 230)), to(rgb(0, 0, .25)));
-    font-family: 'Roboto', sans-serif;
-  
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
+    font-family: "Roboto", sans-serif;
+    left: 30%;
+    position: absolute;
+    cursor: pointer;
   }
-  
   
   .login {
     display: flex;
@@ -105,6 +123,7 @@
     /* background-color: black; */
     /* opacity: 50%; */
     color: white;
+    font-family: "Roboto", sans-serif;
   }
   
   .song_title {
@@ -163,24 +182,21 @@
     display: block;
   }
   
-  p{
-    font-family: 'Roboto', sans-serif;
+  p {
+    font-family: "Roboto", sans-serif;
     font-size: xx-large;
     font-style: italic;
     font-size: 4rem;
-    color: rgb(255,242,181);
-    background-image: linear-gradient(rgb(230,230,230) 28%, 
-      rgb(77,77,77) 40%,
-      rgb(233,230,230) 54%);
+    color: rgb(255, 242, 181);
+    background-image: linear-gradient(rgb(230, 230, 230) 28%, rgb(77, 77, 77) 40%, rgb(233, 230, 230) 54%);
     /* text-align: center; */
-    -webkit-background-clip:text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    letter-spacing: .5rem;
+    letter-spacing: 0.5rem;
     /* display: flex; */
     position: fixed;
     left: 20%;
     bottom: 9%;
-  
   }
   
   #volume_Control {
