--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,9 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
   \*************************************************************************************************************************************/
 /*!*************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
+  \*************************************************************************************************************************************/
+/*!*************************************************************************************************************************************!*\
   !*** css ./css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/index.scss ***!
   \*************************************************************************************************************************************/
 /*!*************************************************************************************************************************************!*\
@@ -42,7 +45,7 @@
     right: 3%;
   }
   
-  #top_logo{
+  #top_logo {
     display: none;
     height: 100px;
     width: auto;
@@ -50,7 +53,9 @@
   }
   
   #mood {
-    color: rgb(255, 255, 255);
+    padding: 0;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
     border-color: #7c7c7c;
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
     font-family: "Roboto", sans-serif;
@@ -59,6 +64,7 @@
   }
   
   #genre {
+    font-size: 16px;
     border-color: #7c7c7c;
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
     font-family: "Roboto", sans-serif;
@@ -66,6 +72,7 @@
   }
   
   #start_button {
+    font-size: 16px;
     display: block;
     border-color: #7c7c7c;
     background: -webkit-gradient(linear, left top, left bottom, from(rgb(230, 230, 230)), to(rgb(0, 0, 0)));
@@ -195,7 +202,7 @@
     display: block;
   }
   
-  #start_text{
+  #start_text {
     text-align: center;
   }
   
@@ -337,3 +344,4 @@
     top: 5%;
     left: 10%;
   }
+  
